--- a/lab1.css
+++ b/lab1.css
@@ -28,14 +28,57 @@ h1 {
     
 }
 
-.add_checkbox {
+
+/* https://codepen.io/AllThingsSmitty/pen/WjZVjo */
+
+.round {
+    position: relative;
+  }
+  
+  .round label {
+    background-color: #fff;
+    border: 1px solid #ccc;
     border-radius: 50%;
-    width: 10px; 
-    height: 10px;
-}
+    cursor: pointer;
+    height: 28px;
+    left: 0;
+    position: absolute;
+    top: 0;
+    width: 28px;
+  }
+  
+  .round label:after {
+    border: 2px solid #fff;
+    border-top: none;
+    border-right: none;
+    content: "";
+    height: 6px;
+    left: 7px;
+    opacity: 0;
+    position: absolute;
+    top: 8px;
+    transform: rotate(-45deg);
+    width: 12px;
+  }
+  
+  .round input[type="checkbox"] {
+    visibility: hidden;
+  }
+  
+  .round input[type="checkbox"]:checked + label {
+    background-color: #66bb6a;
+    border-color: #66bb6a;
+  }
+  
+  .round input[type="checkbox"]:checked + label:after {
+    opacity: 1;
+  }
+  
+/* end */
+  
 
 #tasks {
-    padding-left: 33%;
+    padding-left: 35%;
     flex-direction: row;
     flex-wrap: wrap;
     align-items: center;
