--- a/lab1.css
+++ b/lab1.css
@@ -17,29 +17,48 @@ h1 {
     border-bottom: 5px double white; 
     line-height: 1.5em;
     margin: 12px 0 20px; 
+    size: 300%;
+    text-shadow: 0 0 2px rgb(101, 170, 248), 0 0 2px rgb(101, 170, 248), 
+                 0 0 2px rgb(101, 170, 248), 0 0 2px rgb(101, 170, 248);
+}
+
+.fa-calendar-check {
+    color: rgb(101, 170, 248);
+    text-shadow: 0 0 4px white;
+    /* padding-right: 100px; */
+    padding-right: 12px;
 }
 
 
 /* Button design modified from
    https://codepen.io/AllThingsSmitty/pen/WjZVjo */
 
-.round {
+.reg_round, .add_round {
     position: relative;
   }
   
-  .round label {
+.reg_round label, 
+.add_round label {
     background-color: #fff;
     border: 1px solid #ccc;
     border-radius: 50%;
-    cursor: pointer;
     width: 18px;
     height: 18px;
     left: 0;
     position: absolute;
     top: 0;
-  }
+}
+
+.reg_round label {
+    cursor: pointer;
+}
+
+.add_round label {
+    cursor: default;
+}
   
-  .round label:after {
+.reg_round label:after, 
+.add_round label:after {
     border: 2px solid #fff;
     border-top: none;
     border-right: none;
@@ -51,22 +70,28 @@ h1 {
     top: 5px;
     transform: rotate(-45deg);
     width: 10px;
-  }
+}
   
-  .round input[type="checkbox"] {
+.reg_round input[type="checkbox"], 
+.add_round input[type="checkbox"] {
     visibility: hidden;
-  }
+}
   
-  .round input[type="checkbox"]:checked + label {
+.reg_round input[type="checkbox"]:checked + label,
+.add_round input[type="checkbox"]:checked + label {
     background-color: #66bb6a;
     border-color: #66bb6a;
-  }
+}
   
-  .round input[type="checkbox"]:checked + label:after {
+.reg_round input[type="checkbox"]:checked + label:after, 
+.add_round input[type="checkbox"]:checked + label:after {
     opacity: 1;
-  }
+}
   
 /* end button code */
+
+
+  
 
 .task_text {
     background: rgba(255, 255, 255, 0.3);
@@ -75,7 +100,7 @@ h1 {
     outline: none;
     height: 20px;
     font-size: 100%;
-
+    padding-inline-start: 2%;
 }
 
 .task {
@@ -84,10 +109,52 @@ h1 {
     column-gap: 8pt;
 }
 
+
 #tasks {
     flex-direction: column;
-    row-gap: 5pt;
+    row-gap: 6pt;
     flex-wrap: wrap;
     align-items: center;
     display: flex;
+}
+
+.buttons {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    column-gap: 18pt;
+    background-color: rgba(255, 255, 255, 0.6);
+    overflow: hidden;
+    position: fixed;
+    bottom: 0;
+    width: 101%;
+    height: 5%;
+    margin-left: -1.5%;
+}
+
+.bottom_button {
+    width: 100%;
+    font-size: 90%;
+    color: white;
+    border-radius: 8px;
+    background: rgb(101, 170, 248);
+    background: radial-gradient(rgb(101, 170, 248), rgb(161, 205, 255));
+    /* background: linear-gradient(to top left, rgb(74, 175, 238), rgb(168, 221, 241));  */
+    border: none;
+    outline: none;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    height: 70%;
+}
+
+#clear_complete {
+    margin-left: 4%;
+}
+
+#show_uncomplete {
+    margin-right: 4%;
+}
+
+.bottom_button:hover {
+    background: radial-gradient(lightskyblue, paleturquoise);
 }
