--- a/lab1.css
+++ b/lab1.css
@@ -1,5 +1,5 @@
 html {
-    background: linear-gradient(to bottom right, lightskyblue, paleturquoise);
+    background: linear-gradient(to bottom right, rgb(2, 54, 133), rgb(37, 175, 255));
     background-repeat: no-repeat;
     background-size: cover;
     position: fixed;
@@ -8,7 +8,9 @@ html {
 }
 
 h1 {
-    text-align: center;
+    font-size: 370%;
+    text-align: left;
+    padding-left: 4%;
     color: white;
     font-family: 'Open Sans Condensed', sans-serif;
     font-weight: bolder;
@@ -23,9 +25,8 @@ h1 {
 }
 
 .fa-calendar-check {
-    color: rgb(101, 170, 248);
-    text-shadow: 0 0 4px white;
-    /* padding-right: 100px; */
+    color: rgb(255, 255, 255);
+    /* text-shadow: 0 0 4px white; */
     padding-right: 12px;
 }
 
@@ -41,12 +42,13 @@ h1 {
 .add_round label {
     background-color: #fff;
     border: 1px solid #ccc;
-    border-radius: 50%;
-    width: 18px;
-    height: 18px;
+    /* border-radius: 50%; */
+    width: 27px;
+    height: 27px;
     left: 0;
     position: absolute;
     top: 0;
+    margin-top: 0.7px;
 }
 
 .reg_round label {
@@ -63,13 +65,13 @@ h1 {
     border-top: none;
     border-right: none;
     content: "";
-    height: 5px;
-    left: 3px;
+    height: 4px;
+    width: 11px;
+    left: 6px;
+    top: 8px;
     opacity: 0;
     position: absolute;
-    top: 5px;
     transform: rotate(-45deg);
-    width: 10px;
 }
   
 .reg_round input[type="checkbox"], 
@@ -91,30 +93,30 @@ h1 {
 /* end button code */
 
 
-  
-
 .task_text {
     background: rgba(255, 255, 255, 0.3);
-    border-radius: 5px;
+    /* border-radius: 5px; */
     border: none;
     outline: none;
-    height: 20px;
-    font-size: 100%;
+    height: 100%;
+    font-size: 150%;
+    color: white;
     padding-inline-start: 2%;
 }
 
 .task {
     display: flex;
     align-content: space-between;
-    column-gap: 8pt;
+    column-gap: 18pt;
 }
 
 
 #tasks {
     flex-direction: column;
-    row-gap: 6pt;
+    row-gap: 7pt;
     flex-wrap: wrap;
-    align-items: center;
+    align-items: left;
+    padding-left: 4%;
     display: flex;
 }
 
@@ -123,23 +125,22 @@ h1 {
     justify-content: center;
     align-items: center;
     column-gap: 18pt;
-    background-color: rgba(255, 255, 255, 0.6);
+    background-color: rgba(255, 255, 255, 0.3);
     overflow: hidden;
     position: fixed;
     bottom: 0;
     width: 101%;
-    height: 5%;
+    height: 8%;
     margin-left: -1.5%;
 }
 
 .bottom_button {
     width: 100%;
-    font-size: 90%;
+    font-size: 100%;
     color: white;
-    border-radius: 8px;
+    border-radius: 7px;
     background: rgb(101, 170, 248);
-    background: radial-gradient(rgb(101, 170, 248), rgb(161, 205, 255));
-    /* background: linear-gradient(to top left, rgb(74, 175, 238), rgb(168, 221, 241));  */
+    background: radial-gradient(rgb(54, 147, 253), rgb(17, 105, 206));
     border: none;
     outline: none;
     transition-duration: 0.4s;
@@ -156,5 +157,9 @@ h1 {
 }
 
 .bottom_button:hover {
-    background: radial-gradient(lightskyblue, paleturquoise);
+    background: radial-gradient(rgb(24, 167, 255), rgb(0, 132, 255));
+}
+
+::placeholder {
+    color: rgb(194, 194, 194);
 }
