--- a/lab1.css
+++ b/lab1.css
@@ -8,9 +8,9 @@ html {
 }
 
 h1 {
-    font-size: 370%;
+    font-size: 350%;
     text-align: left;
-    padding-left: 4%;
+    padding-left: 2.54%;
     color: white;
     font-family: 'Open Sans Condensed', sans-serif;
     font-weight: bolder;
@@ -20,14 +20,15 @@ h1 {
     line-height: 1.5em;
     margin: 12px 0 20px; 
     size: 300%;
-    text-shadow: 0 0 2px rgb(101, 170, 248), 0 0 2px rgb(101, 170, 248), 
-                 0 0 2px rgb(101, 170, 248), 0 0 2px rgb(101, 170, 248);
+    text-shadow: 0 0 2px blue, 0 0 3px rgb(101, 170, 248), 
+                 0 0 3px rgb(101, 170, 248), 0 0 3px rgb(101, 170, 248);
 }
 
 .fa-calendar-check {
     color: rgb(255, 255, 255);
-    /* text-shadow: 0 0 4px white; */
-    padding-right: 12px;
+    position: absolute;
+    right: 4%;
+    top: 3%;
 }
 
 
@@ -42,51 +43,60 @@ h1 {
 .add_round label {
     background-color: #fff;
     border: 1px solid #ccc;
-    /* border-radius: 50%; */
-    width: 27px;
-    height: 27px;
+    border-radius: 5px;
+    width: 27.49px;
+    height: 27.49px;
     left: 0;
     position: absolute;
     top: 0;
     margin-top: 0.7px;
-}
-
-.reg_round label {
     cursor: pointer;
 }
 
-.add_round label {
-    cursor: default;
+.add_round label:hover {
+    /* background: radial-gradient(rgb(6, 151, 241), rgb(0, 132, 255)); */
+    box-shadow: 0 0 6px rgb(101, 170, 248);
 }
-  
-.reg_round label:after, 
-.add_round label:after {
+
+.reg_round label:after {
     border: 2px solid #fff;
     border-top: none;
     border-right: none;
     content: "";
     height: 4px;
     width: 11px;
-    left: 6px;
-    top: 8px;
+    left: 7px;
+    top: 10px;
     opacity: 0;
     position: absolute;
     transform: rotate(-45deg);
 }
-  
-.reg_round input[type="checkbox"], 
+
+.add_round label:after {
+    color: white;
+    content: "+";
+    left: 6.5px;
+    top: -2.5px;
+    font-size: 160%;
+    position: absolute;
+}
+
+.reg_round input[type="checkbox"],
 .add_round input[type="checkbox"] {
     visibility: hidden;
 }
   
-.reg_round input[type="checkbox"]:checked + label,
-.add_round input[type="checkbox"]:checked + label {
+.reg_round input[type="checkbox"]:checked + label {
     background-color: #66bb6a;
-    border-color: #66bb6a;
+    border-color: white;
+}
+
+.add_round input[type="checkbox"] + label {
+    background-color: blue;
+    border-color: white;
 }
   
-.reg_round input[type="checkbox"]:checked + label:after, 
-.add_round input[type="checkbox"]:checked + label:after {
+.reg_round input[type="checkbox"]:checked + label:after {
     opacity: 1;
 }
   
@@ -95,10 +105,12 @@ h1 {
 
 .task_text {
     background: rgba(255, 255, 255, 0.3);
-    /* border-radius: 5px; */
+    border-radius: 5px;
     border: none;
     outline: none;
     height: 100%;
+    width: 100%;
+    
     font-size: 150%;
     color: white;
     padding-inline-start: 2%;
@@ -107,16 +119,17 @@ h1 {
 .task {
     display: flex;
     align-content: space-between;
-    column-gap: 18pt;
+    column-gap: 25pt;
 }
 
 
 #tasks {
     flex-direction: column;
-    row-gap: 7pt;
+    row-gap: 10pt;
     flex-wrap: wrap;
-    align-items: left;
-    padding-left: 4%;
+    align-items: h;
+    padding-left: 2.54%;
+    padding-right: 2.54%;
     display: flex;
 }
 
@@ -130,34 +143,38 @@ h1 {
     position: fixed;
     bottom: 0;
     width: 101%;
-    height: 8%;
+    height: 11.5%;
     margin-left: -1.5%;
 }
 
 .bottom_button {
     width: 100%;
-    font-size: 100%;
-    color: white;
-    border-radius: 7px;
-    background: rgb(101, 170, 248);
-    background: radial-gradient(rgb(54, 147, 253), rgb(17, 105, 206));
+    font-size: 150%;
+    color: rgb(15, 116, 231);
+    background: white;
+    /* border-radius: 7px; */
+    /* background: rgb(101, 170, 248);
+    background: radial-gradient(rgb(54, 147, 253), rgb(17, 105, 206)); */
+    border-radius: 5px;
     border: none;
     outline: none;
     transition-duration: 0.4s;
     cursor: pointer;
-    height: 70%;
+    height: 60%;
 }
 
-#clear_complete {
+
+#show_uncomplete {
     margin-left: 4%;
 }
 
-#show_uncomplete {
+#clear_complete {
     margin-right: 4%;
 }
 
 .bottom_button:hover {
-    background: radial-gradient(rgb(24, 167, 255), rgb(0, 132, 255));
+    background: radial-gradient(rgb(0, 157, 255), rgb(0, 60, 255));
+    color: white;
 }
 
 ::placeholder {
