--- a/app/src/Task.css
+++ b/app/src/Task.css
@@ -20,7 +20,6 @@
 }
 
 .add_round label:hover {
-    /* background: radial-gradient(rgb(6, 151, 241), rgb(0, 132, 255)); */
     box-shadow: 0 0 6px rgb(101, 170, 248);
 }
 
@@ -49,7 +48,7 @@
 
 .reg_round input[type="checkbox"],
 .add_round input[type="checkbox"] {
-    visibility: hidden;
+    /*visibility: hidden;*/
 }
 
 .reg_round input[type="checkbox"]:checked + label {
@@ -58,8 +57,6 @@
 }
 
 .add_round input[type="checkbox"] + label {
-    /* background-color: rgb(15, 116, 231);
-    border-color: rgb(15, 116, 231); */
     background-color: rgb(179, 146, 255);
     border-color: rgb(179, 146, 255);
 }
