--- a/src/BottomButtons.css
+++ b/src/BottomButtons.css
@@ -10,11 +10,26 @@
     height: 11.5%;
 }
 
-.bottom_button {
+.bottom_button_reg {
     width: 100%;
     font-size: 150%;
     color: rgb(15, 116, 231);
     background: white;
+    /* background: rgb(101, 170, 248);
+    background: radial-gradient(rgb(54, 147, 253), rgb(17, 105, 206)); */
+    border-radius: 5px;
+    border: none;
+    outline: none;
+    transition-duration: 0.4s;
+    cursor: pointer;
+    height: 60%;
+}
+
+.bottom_button_new {
+    width: 100%;
+    font-size: 150%;
+    color: white;
+    background: radial-gradient(rgb(0, 114, 185), rgb(0, 60, 255));
     /* background: rgb(101, 170, 248);
     background: radial-gradient(rgb(54, 147, 253), rgb(17, 105, 206)); */
     border-radius: 5px;
